--- a/css/servicio.css
+++ b/css/servicio.css
@@ -7,16 +7,17 @@ body{
     display: flex;
     flex-direction: row;
     border-radius: 45px;
-    width: 100px;
+    width: 150px;
 
 }
-header{
-        background-color: rgb(105, 115, 189);
+header{ background-color: rgb(105, 115, 189);
     text-align: center;
+
 }
 nav li{
     display: inline;
-    padding: 60px;
+    justify-content: flex-start;
+    padding: 65px;
     font-size: 25px;
 }
 nav a {
@@ -24,23 +25,10 @@ nav a {
     color: black;
 }
 nav a:hover{
-color: rgb(113, 209, 216);
+color: rgb(14, 53, 56);
     text-decoration: underline;
 }
-main{
-    background-color: aliceblue;
-    color: black;
-}
 .card {
-  margin: 20px;
-  width: 300px;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0px 5px 10px;
-  font-family: "Josefin Sans", sans-serif;
-  text-align: center;
-}
-.cards {
   margin: 20px;
   width: 300px;
   border-radius: 10px;
@@ -52,35 +40,25 @@ main{
 .card img {
   width: 100%;
 }
-.cards img {
-  width: 100%;
-}
+
 .card-content {
-  padding: 5px;
-}
-.cards-content {
   padding: 5px;
 }
 .card h1 {
   text-align: center;
-  color: rgb(70, 166, 181);
-  font-size: 25px;
-}
-.cards h1 {
-  text-align: center;
-  color: rgb(70, 166, 181);
+  color: rgb(7, 94, 107);
   font-size: 25px;
 }
 .tarjeta {
   display: flex;
   justify-content: center;
+}.two{
+  display: flex;
+  justify-content: center;
 }
+
 .card:hover {
-  background-color: rgb(25, 112, 133);
-  transform: scale(1.05);
-}
-.cards:hover {
-  background-color: rgb(25, 112, 133);
+  background-color: rgb(138, 200, 216);
   transform: scale(1.05);
 }
 footer {
