--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
 body{
-    margin: 0;
-    padding: 0;
-    background-color: rgb(150, 150, 226);
+ background-color: #9da0e4;
+}
+header{
+        background-color: rgb(105, 115, 189);
+        display: flex;
+        justify-content: space-evenly;
+    text-align: center;
+    padding: 5px 20px;
 }
 .logo{
     display: flex;
     flex-direction: row;
     border-radius: 45px;
     width: 100px;
-}
-header{
-
-    background-color: rgb(105, 115, 189);
-    text-align: center;
 }
 nav li{
     display: inline;
@@ -28,10 +28,21 @@ nav a:hover{
 color: rgb(113, 209, 216);
     text-decoration: underline;
 }
-main{
+.Mision{
+    padding: 40px;
+}
+.Mision h2{
     text-align: center;
-    background-color: rgb(126, 131, 216);
-    color: black;
+    font-size: 30px;
+margin-bottom: 20px;
+}
+.Vision{
+padding: 40px;
+}
+.Vision h2{
+     text-align: center;
+    font-size: 30px;
+margin-bottom: 20px;
 }
 footer {
   text-align: center;
@@ -40,4 +51,44 @@ footer {
 footer.dos {
   text-align: center;
   background-color: rgb(97, 76, 142);
+}
+.container{
+ background-color: #9da0e4;
+}
+.container{
+background-color: #9da0e4;
+}
+@keyframes moveRight {
+  0%   { transform: translateX(0); }
+  50%  { transform: translateX(100px); }
+  100% { transform: translateX(0); }
+}
+
+section {
+  padding: 60px 20px;
+}
+
+footer p {
+  margin: 5px 0;
+}
+
+@media (max-width: 768px) {
+  .animated-img {
+    width: 150px;
+  }
+  section {
+    padding: 40px 15px;
+  }
+}
+
+@media (max-width: 480px) {
+  .animated-img {
+    width: 120px;
+  }
+  h2, h3 {
+    font-size: 1.4rem;
+  }
+  p {
+    font-size: 0.9rem;
+  }
 }
