--- a/css/contac.css
+++ b/css/contac.css
@@ -1,17 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
-body{
-    margin: 0;
-    padding: 0;
-}
 .logo{
     display: flex;
     flex-direction: row;
     border-radius: 45px;
-    width: 100px;
+    padding-left: 25px;
+    width: 120px;
 
 }
 header{
-        background-color: rgb(105, 115, 189);
+background-color: rgb(107, 127, 188);
     text-align: center;
 }
 nav li{
@@ -27,15 +23,40 @@ nav a:hover{
 color: rgb(113, 209, 216);
     text-decoration: underline;
 }
-main{
-    background-color: aliceblue;
-    color: black;
+form input {
+  border-radius: 20px;
+  padding: 10px;
 }
-footer {
-  text-align: center;
-  background-color: rgb(128, 109, 170);
+
+.color{ text-align: center;
+    background-color: rgb(178, 157, 234);
 }
-footer.dos {
-  text-align: center;
-  background-color: rgb(97, 76, 142);
+.colores{ text-align: center;
+    background-color: rgb(131, 121, 201);
+}
+.fondo{
+ background-color: #b5b0f8;
+}
+@media (max-width: 768px) {
+  h2 {
+    font-size: 1.5rem;
+  }
+  h3 {
+    font-size: 1.2rem;
+  }
+  form {
+    padding: 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  h2 {
+    font-size: 1.2rem;
+  }
+  h3 {
+    font-size: 1rem;
+  }
+  input {
+    font-size: 0.9rem;
+  }
 }
