--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
-body{
-    margin: 0;
-    padding: 0;
-    background-color: rgb(150, 150, 226);
-}
 .logo{
     display: flex;
     flex-direction: row;
     border-radius: 45px;
-    width: 100px;
-}
-header{
+    padding-left: 25px;
+    width: 120px;
 
-    background-color: rgb(105, 115, 189);
+}
+header{ background-color: rgb(107, 127, 188);
     text-align: center;
+
 }
 nav li{
     display: inline;
-    padding: 60px;
+    justify-content: flex-start;
+    padding: 65px;
     font-size: 25px;
 }
 nav a {
@@ -25,14 +21,85 @@ nav a {
     color: black;
 }
 nav a:hover{
-color: rgb(113, 209, 216);
+color: rgb(14, 53, 56);
     text-decoration: underline;
 }
+body {
+  background-color: #b5b0f8;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
-footer p, footer small {
-    margin: 0;
+.btn-menu {
+  background-color: #5d6dac;
+  border: none;
+  color: #000;
+  border-radius: 30px;
+  padding: 8px 20px;
+  transition: 0.3s;
+  font-weight: 500;
+}
+
+.btn-menu:hover {
+  background-color: #b5b0f8;
+  color: #fff;
+}
+
+.section-body {
+  background-color: #b5b0f8;
+  color: #000;
+}
+
+.section-body-light {
+  background-color: #b5b0f8;
+  color: #000;
+}
+
+.texto {
+  max-width: 900px;
+  margin: 0 auto;
+  line-height: 1.6;
+}
+
+.linea {
+  width: 60%;
+  margin: 20px auto;
+  border: 1px solid #000;
+}
+
+.moving-img {
+  animation: mover 6s ease-in-out infinite alternate;
+}
+.color{ text-align: center;
+ background-color: #b5b0f8;
+}
+.colores{ text-align: center;
+ background-color: #b5b0f8;
+}
+@keyframes mover {
+  from { transform: scale(1); }
+  to { transform: scale(1.05); }
+}
+
+
+.color{ text-align: center;
+    background-color: rgb(178, 157, 234);
+}
+.colores{ text-align: center;
+    background-color: rgb(131, 121, 201);
+}
+
+@media (max-width: 768px) {
+  .logo {
+    width: 45px;
   }
-  
-  .navbar-brand img {
-    border-radius: 50%;
+
+  .btn-menu {
+    padding: 6px 14px;
+    font-size: 0.9rem;
   }
+
+  .texto {
+    padding: 0 15px;
+    font-size: 0.95rem;
+  }
+}
